# Noname

./: ANALISIS_CODIGO.md  CMakeLists.txt  LECCION_01_Optimizacion_Property.md  LECCION_02_Strategy_Pattern.md  LECCION_03_Flyweight_Pattern.md  LECCION_04_Observer_Pattern.md  PATRONES_Y_OPTIMIZACIONES.md  PROGRESO_FLYWEIGHT_COMPLETADO.md  TODOS.md  TODOS.txt
src/: AchievementObserver.h  AttackStrategy.h  CMakeLists.txt  Character.cpp  Character.h  CharacterData.h  CombatLogObserver.h  Container.cpp  Container.h  Creature.h  CreaturesManager.h  Event.h  EventObserver.h  EventSubject.h  EventTypes.h  FileManager.cpp  FileManager.h  GameManager.cpp  GameManager.h  Heritables.h  HtmlBuilder.h  Inventory.cpp  Inventory.h  Item.h  ItemEnumTypes.h  ItemTemplate.cpp  ItemTemplate.h  ItemTemplateFactory.cpp  ItemTemplateFactory.h  Item_Flyweight.h  ItemsManager.h  LogManager.cpp  LogManager.h  MagicAttackStrategy.h  Manager.cpp  Manager.h  MeleeAttackStrategy.h  Noname.cpp  Player.cpp  Player.h  (+18 more)
tests/: LogManagerTests.cpp  MainAllTests.cpp  TestCharacter.cpp  TestContainer.cpp  TestCreatureManager.cpp  TestCreatures.cpp  TestFlyweightPattern.cpp  TestGameManager.cpp  TestInventory.cpp  TestItem.cpp  TestLogManager.cpp  TestObserverPattern.cpp  TestPlayer.cpp  TestProperty.cpp  TestRankManager.cpp  TestRanking.cpp  TestRelationship.cpp  TestRelationships.cpp  TestSkill.cpp  TestSkillsManager.cpp  TestUtils.cpp  TestWeapon.cpp  TestWeaponsManager.cpp
